src/objects/Timezone__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>IQVIAPSA-9600 : Custom Setting to stores the cut-off time of Batches for different timezones</description>
    <fields>
        <fullName>Batch_Name__c</fullName>
        <description>IQVIAPSA-9600</description>
        <label>Batch Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CutOffUTCTime__c</fullName>
        <description>IQVIAPSA-9600</description>
        <label>CutOffUTCTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Module__c</fullName>
        <description>IQVIAPSA-9600</description>
        <label>Module</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Offset__c</fullName>
        <description>IQVIAPSA-9600</description>
        <label>Offset</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Timezone</label>
</CustomObject>